--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-countdown",
+  "name": "angularcountdown",
   "description": "UI Component For Angular 1.x Applications",
   "version": "0.1.0",
   "filename": "angular-countdown.min.js",
