correcting source error, release 0.1.1

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "angularcountdown",
-  "version": "0.1.0",
-  "main": "./dist/angular-cron-jobs.min.js",
+  "version": "0.1.1",
+  "main": "./dist/angular-countdown.min.js",
   "description": "UI Component For Angular 1.x Applications",
   "repository": {
     "type": "git",
