--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angularcountdown",
   "description": "UI Component For Angular 1.x Applications",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "filename": "angular-countdown.min.js",
   "main": "./dist/angular-countdown.min.js",
   "homepage": "https://github.com/jacobscarter/angular-countdown",
@@ -12,9 +12,8 @@
   },
   "keywords": [
     "angular",
-    "cron",
-    "cron-job",
-    "corn job"
+    "countdown",
+    "angular-countdown"
   ],
   "maintainers": [
     {
