--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "angularcountdown",
   "version": "0.1.1",
-  "main": "./dist/angular-countdown.min.js",
+  "main": "./dist/angularcountdown.min.js",
   "description": "UI Component For Angular 1.x Applications",
   "repository": {
     "type": "git",
